--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
 
-        <!--<activity android:name=".bye.ByeActivity"/>-->
+        <activity android:name=".bye.ByeActivity"/>
 
     </application>
 
